tdf#112089 add charts to the ShapeMap

Charts weren't added to the collection what resulted
in missing ids during export (target field).

Change-Id: Ie96a4e33a52c5448342a3c3dcec0d8e8b244e270